# nlp_review_classifier

./: LICENSE  Makefile  README.md  pyproject.toml
models/: classificador_sentimento_logreg.pkl  vetorizador_tfidf.pkl
nlp_review_classifier/: __init__.py  dataset.py  features.py  plots.py
nlp_review_classifier/modeling/: predict.py  train.py
notebooks/: 01-exploracao-e-limpeza.ipynb  logistic_regression.ipynb
