[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlp_review_classifier"
version = "0.0.1"
description = "Classificador de sentimentos (positivo/negativo) para reviews de filmes usando NLP."
authors = [
  { name = "Felipe Feitosa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["nlp_review_classifier"]
include = ["pyproject.toml", "nlp_review_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nlp_review_classifier"]
force-sort-within-sections = true

